Some jvm args & fix.